recording problem found in block

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="static/styles.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.js"></script>
     <script src="https://imrapid.co/libs/IO.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="static/js/lib.js"></script>
